Updated to .net 6.0; Fixed active nav item on mobile;

--- a/src/main/Port.Adapter/UI/Views/Blazor/wwwroot/css/site.css
+++ b/src/main/Port.Adapter/UI/Views/Blazor/wwwroot/css/site.css
@@ -212,6 +212,10 @@ app {
     color: white;
 }
 
+.nav-item a.activetop {
+    color: dodgerblue;
+}
+
 .nav-item a:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
